added routes based configurations and icons config, colors are also added

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,8 @@ target 'teachnaionassignment' do
 
   pod 'RNScreens', :path => '../node_modules/react-native-screens'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'teachnaionassignmentTests' do
     inherit! :search_paths
     # Pods for testing
